# security.foi.ge

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  wingpo
docs/about/: index.md  privacy.md  tos.md  trainers.md
docs/guide/: prerequisites.md
docs/policies/: browser.md  index.md  ios.md  macos.md  windows.md
docs/policies/files/apple/: foi_security_policy_ios.mobileconfig  foi_security_policy_macos.mobileconfig  foi_tools.sh
docs/policies/files/foi_security_policy_win/: 1. Install GPO.lnk  2. Disable Passwords.lnk  2. Disable Passwords.reg  foi_tools.cmd
docs/policies/files/foi_security_policy_win/helpers/: backup_gpo.bat  install_gpo.bat
docs/policies/files/foi_security_policy_win/scripts/: backup_gpo.lnk
docs/policies/files/foi_security_policy_win/tasks/: FOI2FAPinEnforcementDisable.xml  FOI2FAPinEnforcementEnable.xml
docs/policies/files/windows/: foi_tools.cmd
docs/policies/files/windows/PolicyDefinitions/: brave.admx  chrome.admx
docs/policies/files/windows/tasks/: FOIPinEnforcementDisable.xml  FOIPinEnforcementEnable.xml
docs/solutions/: android.md  antivirus.md  behavior.md  dns.md  hardware-keys.md  index.md  ios.md  macos.md  messaging.md  mfa.md  misconceptions.md  passwords.md  vpn.md  windows.md
docs/tools/: password-generator.md  short_words.txt
docs/trainers/: index.md
includes/: device_has_updates.md  foi_security_policy.md
theme/assets/stylesheets/: extra.css
theme/partials/: copyright.html
theme/partials/integrations/: analytics.html
tools/: mac  win
(+26 files in other folders)
